@@ -9,11 +9,20 @@ In `CFGVisualizeOptions`:
  * renamed `isPDF()` to `isPdfOutput()`
  * renamed `isString()` to `isStringOutput()`
 
+Dataflow Framework:
+ * In `playground` package, renamed `*Playground.java` to `*Pdf.java`
+
 **Closed issues:**
 
 
 Version 3.50.0 (2025-08-28)
 ---------------------------
+
+**User-visible changes:**
+
+If you supply `--add-exports` flags when you run the Checker Framework,
+you need to add:
+`--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED`.
 
 **Implementation details:**
 
